# monad.ai

./: README.md  _config.yml  index.html  routes.js
Typescript/: .gitignore  README.md  index.md  package-lock.json  package.json  server.ts  tsconfig.json  typedoc.json  vitest.config.ts
Typescript/docs/: Monad-&&-Cleaker(me).md  Namespace-Protocol-Resolution.md  index.md  netget-registration.md
Typescript/env/: self.example.json  self.json
Typescript/scripts/: analyze-decisions.ts  watch-weights.ts
Typescript/src/: app.ts  bootstrap.ts
Typescript/tests/: appFactory.test.ts  claimSemanticSeeds.test.ts  claimsOpenProfile.test.ts  commitsync.test.ts  hostProjection.test.ts  hostResolver.test.ts  observerRelation.test.ts  persistentClaim.test.ts  replayCanonicalization.test.ts  rootUsersProjection.test.ts  selfMapping.test.ts  semanticBootstrap.test.ts  setup.ts  (+3 more)
crate/: .gitignore  Cargo.toml  README.MD
crate/src/: daemon.rs  main.rs  state.rs
crate/src/routes/: mod.rs  router.rs
crate/src/routes/graphql/: graphql.rs  mod.rs  mutation_root.rs  playground.rs  query_root.rs
crate/src/routes/rest/: list_us_handler.rs  mod.rs  request_history_logs_handler.rs
crate/src/utils/: logger.rs
crate/static/html/: index.html  pretty_json.html
docs/: Notes.md  index.html  index.md
monad.crate/: Cargo.toml  README.MD
monad.npm/: package.json
npm/: README.md  blockchain.db  blockchain.db-shm  blockchain.db-wal  ecosystem.config.cjs  jest.config.cjs  package-lock.json  package.json  server.ts  tsconfig.json  typedoc.json  vitest.config.ts
pip/: README.md
(+1142 files in other folders)
