[package]
name = "monad-ai"
version = "0.1.1"
edition = "2024"
description = "Experimental monadic architecture runner for autonomous AI."
license = "MIT"
readme = "README.md"          # Opcional pero recomendable
repository = "https://github.com/neurons-me/monad.ai"  # Ajusta si aplica
categories = ["command-line-utilities"]  # Opcional
keywords = ["ai", "monad", "loop", "autonomous"]        # Opcional

[[bin]]
name = "monad"     # executable that generates.
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-cors = "0.6"
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
this-me = { path = "../../../../all.this/packages-src/this.me/crate", default-features = false, features = ["sqlite"] }
this-env = { path = "../../../../all.this/packages-src/this.env/crate" }
env_logger = "0.11.8"
chrono = "0.4.41"
log = "0.4"
actix-files = "0.6.6"
dirs = "6.0.0"
actix-web-actors = "4.3.1"
